volexc/tests/ui/service_index_zero.vol
// Method index 0 is reserved in service

message Request {}
message Response {}

service Foo {
    fn bar(Request) -> Response = 0;
}
